Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjUndefined.quorum
class Main
    action Main
        Text v = undefined
        Test(v)
    end

    action Test(Text var)
        if var = undefined
            output "passed"
        end
    end
end
