Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberundefined.quorum
class Main
    action Main
        number v = undefined
        Test(v)
    end

    action Test(number var)
    end
end
